[tool.poetry]
name = "pandas-sandbox"
version = "0.1.0"
description = "Things I usually forgot about pandas."
authors = ["Pio Mendoza <pio.lauren.mendoza@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
jupyterlab = "^3.3.4"

[tool.poetry.dev-dependencies]
blackcellmagic = "^0.0.3"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
